--- a/style.css
+++ b/style.css
@@ -117,11 +117,11 @@ nav ul {
     flex-direction: row;
     background-color: var(--champagne-gold);
     list-style: none;
-    padding: 1%;
+    justify-content: center;
 }
 
 nav ul li {
-    padding: 2vw;
+    padding: 2vw 4vw;
     font-size: 1.5rem;
     font-weight: 600;
 }
