--- a/style.css
+++ b/style.css
@@ -149,6 +149,11 @@ h3 ~ p {
     padding: 0;
 }
 
+figcaption {
+    font-style: italic;
+    text-align: center;
+}
+
 /*UL STYLES*/
 ul {
     color: var(--soft-white);
@@ -169,6 +174,22 @@ hr {
     border-radius: 15px;
     padding: 2.5vw;
     margin: 3vw 5vw;
+}
+
+.group {
+    padding: 5vw;
+}
+
+.image-and-caption-top {
+    border-radius: 1rem 1rem 0rem 0rem;
+}
+
+.image-and-caption-bottom {
+    border-radius: 0rem 0rem 1rem 1rem;
+}
+
+.image-and-caption figcaption {
+    background-color: var(--soft-white);
 }
 
 /*ID STYLES*/
