--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ nav ul li a {
     color: var(--midnight-blue);
 }
 
-/*P STYLES*/
+/*TEXT STYLES*/
 header p {
     color: var(--soft-white);
     font-style: italic;
@@ -156,6 +156,13 @@ figcaption {
     margin-bottom: 1vw;
 }
 
+address {
+    color: var(--soft-white);
+    text-align: center;
+    padding: 8vw 0vw 5vw 0vw;
+    font-size: 1rem;
+}
+
 /*UL STYLES*/
 ul {
     color: var(--soft-white);
@@ -170,6 +177,32 @@ hr {
     margin: 5vw auto;
     width: 90%;
 }
+
+/*A STYLES*/
+div ~ a {
+    color: var(--soft-white);
+    text-decoration: none;
+    background-color: var(--olive-green);
+    font-weight: 600;
+    padding: 2vw 26vw 2vw 26vw;
+    margin: -1vw 3vw 0vw 5vw;
+    border-radius: 8px;
+    display: inline-block;
+    text-align: center;
+    font-size: 1.25rem;
+}
+
+address > a {
+    color: var(--soft-white);
+    text-decoration: none;
+}
+
+div > a {
+    color: var(--champagne-gold);
+    text-decoration: none;
+    padding: 0.25rem;
+}
+
 /*CLASS STYLES*/
 .green-container {
     background-color: var(--olive-green);
@@ -181,16 +214,28 @@ hr {
 .image-and-caption {
     display: inline-block;
     border-radius: 1rem 1rem 1rem 1rem;
-    box-shadow: 0px 3px 8px 3px grey;
+    box-shadow: 0px 4px 8px 1px rgb(175, 169, 169);
     margin: 2rem;
     overflow: hidden;
     background-color: var(--soft-white);
+}
+
+.email {
+    color: var(--champagne-gold);
+    font-weight: 600;
 }
 
 /*ID STYLES*/
 #first-h2 {
     padding-top: 10vw;
     padding-bottom: 0.25vw;
+}
+
+#social-media {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0vw 2.5vw 3vw 2.5vw;
 }
 
 /* MEDIA QUERY (medium) */
