--- a/style.css
+++ b/style.css
@@ -82,11 +82,22 @@ body {
     background-color: var(--soft-white);
     color: var(--dark-charcoal);
     line-height: 1.5;
+    display: grid;
+    grid-template-columns: auto;
+    justify-content: center;
+    align-items: center;
 }
 
 /*HEADER, MAIN, FOOTER STYLES*/
 header, footer {
     background-color: var(--midnight-blue);
+}
+
+header {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 main {
